--- a/难住我的问题.md
+++ b/难住我的问题.md
@@ -24,10 +24,16 @@
 - fastlane有没有清楚缓存的功能
 - 多target，分别打包
 
+4.答案    
+- 切换bundleId失败，只是改变了info.plist中的id, project.pbxproj中的并没有改变    
+- sed指令替换project.pbxproj文本中的id
+
 # fastlane蒲公英上传插件失败
 1.可以解决的方案
 - 查看上传源码，分析原因
-- 
+
+2.答案    
+- 第三方库有问题。直接使用官方的命令行工具上传
 
 # review board 命令行工具不好用
 1.前提条件
@@ -38,4 +44,6 @@
 - 查看官网，自定义插件
 
 # 企业应用下载失败
-> what the fuck..
+1.部分用户反馈无法下载安装    
+2.答案
+> target配置系统最低要求为9.0  project配置的系统最低要求为10.2； 统一改为9.0即可。
