--- a/难住我的问题.md
+++ b/难住我的问题.md
@@ -47,3 +47,9 @@
 1.部分用户反馈无法下载安装    
 2.答案
 > target配置系统最低要求为9.0  project配置的系统最低要求为10.2； 统一改为9.0即可。
+
+# CocoaPods安装第三方库本地无缓存
+- 问题：我的机器上没有缓存，有部分同事表示并无此现象。自己一直认为每次都需要重新下载第三方库.
+- 官网：确实有缓存逻辑，`pod cache list`可以查看。缓存路径`~/Library/Caches/CocoaPods/Release/..`
+- 说明: 每次都会下载到缓存，再拷贝到工程目录
+- 答案: 我使用了CleanMyMac,每次都把下载好的第三方库清除了。。
