--- a/难住我的问题.md
+++ b/难住我的问题.md
@@ -53,3 +53,7 @@
 - 官网：确实有缓存逻辑，`pod cache list`可以查看。缓存路径`~/Library/Caches/CocoaPods/Release/..`
 - 说明: 每次都会下载到缓存，再拷贝到工程目录
 - 答案: 我使用了CleanMyMac,每次都把下载好的第三方库清除了。。
+
+# abstract_target解决多project共享pod问题
+- 为何分开写编译不过，使用abstract_target可以
+- 
